fixes in alignment in global controls

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,14 +12,14 @@
 }
 
 .custom-filter-title {
-    text-align: left;
+    text-align: center;
     font-size: 22px;
     font-weight: bold;
     padding: 4px;
 }
 
 .custom-filter-armed {
-    text-align: left;
+    text-align: center;
     font-size: 22px;
     font-weight: bold;
     padding: 6px;
@@ -33,10 +33,6 @@
     height: 160vh;
     display: flex;
     flex-direction: column;
-}
-
-.checkbox-label {
-    margin-left: 10px;
 }
 
 .custom-card-title {
